--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <!--internal css-->
+    <style>
+        .cbe{
+            color: red;
+        }
+    </style>
+    <!--external link-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    BIG L
+    <!--inline css-->
+    <h1 style="color: blue;">
+        NEHRU ARTS AND SCIENCE
+    </h1>
+
+    <p class="cbe">
+        CBE
+    </p>
+    <!--external css-->
+    <h3 class="hello">
+        Ananth Ram
+    </h3>
 </body>
 </html>
