--- a/web/index.html
+++ b/web/index.html
@@ -26,5 +26,13 @@
     <h3 class="hello">
         Ananth Ram
     </h3>
+<!-- element sector -->
+ <h1>
+    heading 1
+ </h1>
+<!-- class sector -->
+ <h1 id="heading3">
+    heading3
+ </h1>
 </body>
 </html>
