--- a/web/index.html
+++ b/web/index.html
@@ -35,4 +35,9 @@
     heading3
  </h1>
 </body>
+<script>
+    //alert("hello")
+    console.log("hi,hello")
+</script>
+<script src="script.js"></script>
 </html>
