--- a/web/register.html
+++ b/web/register.html
@@ -29,8 +29,8 @@
             <input type="submit" value="Submit" class="input-btn">
          </form>
     </div>
-    <buttom onclick="hi()">Hi </buttom>
-    <buttom onclick="hello()">Hello </buttom>
+    <button onclick="hi()">Hi </button>
+    <button onclick="hello()">Hello </button>
 </body>
 <script>
     function hi(){
